--- a/.github/workflows/staging-imaging-macos.yml
+++ b/.github/workflows/staging-imaging-macos.yml
@@ -12,7 +12,7 @@ jobs:
       with:
           repository: Aspose/products.aspose.com
           token: ${{ secrets.REPO_TOKEN }}
-          ref: samer.el-khatib.IMAGINGNET-5456_with_content
+          ref: alexander.feigin.IMAGINGNET-5456_with_content
           fetch-depth: 0 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
@@ -28,7 +28,7 @@ jobs:
     - name: Build Imaging
       run: hugo --config "./config-imaging.toml" -c "content/imaging" -b "https://products-qa.aspose.com/imaging" --cleanDestinationDir --minify
     - name: Deploy Imaging to S3
-      run: hugo deploy --config "./config-imaging.toml" --maxDeletes=-1 --target "imaging" --force
+      run: hugo deploy --config "config/imaging.toml" --maxDeletes=-1 --target "staging" --force
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.ACCESS_KEY }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS }}
